# sticker_tools

./: README.md  install.spec  main.py  pyproject.toml  uk.spec
src/gui/: interface.py
src/sticker_tools/: cli_interface.py  convert_optimize.py  patch_duration.py
