[project]
name = "sticker-tools"
version = "1.0.2"
description = ""
authors = [
    {name = "vbidula",email = "vadym.bidula@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python (>=0.2.0,<0.3.0)",
]

[project.optional-dependencies]
gui = [
    "pyqt6 (>=6.9.1,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
sticker = "sticker_tools.cli_interface:create_sticker"
